@@ -1,3 +1,7 @@
+w17 08.06.2016 21:15:44 +0300 - build 4698
+
+1. Уточнение 4697 - не пытаемся отключать Win10 full-screen, просто ничего не делаем по Alt-F9 для него.
+
 w17 08.06.2016 17:25:01 +0300 - build 4697
 
 1. Пытаемся нормально отрабатывать полноэкранный режим Win10.
